--- a/backend/config.json.example
+++ b/backend/config.json.example
@@ -1,7 +1,7 @@
 {
     "db" : {
-        "user": "root",
-        "password": "123sohai123",
+        "user": "*************",
+        "password": "*************",
         "host": "127.0.0.1",
         "port": "3306",
         "database": "kucingnft",
